@@ -89,7 +89,7 @@ sub load_libraries
     $ardrone->connect;
 
     my $dev = UAV::Pilot::Control::ARDrone::Event->new({
-        sender => $ardrone,
+        driver => $ardrone,
     });
     my $cv = $dev->init_event_loop;
     my $repl = UAV::Pilot::Commands->new({
