@@ -49,7 +49,7 @@ sub show_nav
     $ardrone->connect;
 
     my $dev = UAV::Pilot::Control::ARDrone::Event->new({
-        sender => $ardrone,
+        driver => $ardrone,
     });
 
     my $cv = $dev->init_event_loop;
