@@ -16,50 +16,50 @@ has 'video' => (
 sub takeoff
 {
     my ($self) = @_;
-    $self->sender->at_ref( 1, 0 );
+    $self->driver->at_ref( 1, 0 );
     return 1;
 }
 
 sub land
 {
     my ($self) = @_;
-    $self->sender->at_ref( 0, 0 );
+    $self->driver->at_ref( 0, 0 );
 }
 
 sub pitch
 {
     my ($self, $pitch) = @_;
-    $self->sender->at_pcmd( 1, 0, 0, $pitch, 0, 0 );
+    $self->driver->at_pcmd( 1, 0, 0, $pitch, 0, 0 );
 }
 
 sub roll
 {
     my ($self, $roll) = @_;
-    $self->sender->at_pcmd( 1, 0, $roll, 0, 0, 0 );
+    $self->driver->at_pcmd( 1, 0, $roll, 0, 0, 0 );
 }
 
 sub yaw
 {
     my ($self, $yaw) = @_;
-    $self->sender->at_pcmd( 1, 0, 0, 0, 0, $yaw );
+    $self->driver->at_pcmd( 1, 0, 0, 0, 0, $yaw );
 }
 
 sub vert_speed
 {
     my ($self, $speed) = @_;
-    $self->sender->at_pcmd( 1, 0, 0, 0, $speed, 0 );
+    $self->driver->at_pcmd( 1, 0, 0, 0, $speed, 0 );
 }
 
 sub calibrate
 {
     my ($self) = @_;
-    $self->sender->at_calib( $self->sender->ARDRONE_CALIBRATION_DEVICE_MAGNETOMETER );
+    $self->driver->at_calib( $self->driver->ARDRONE_CALIBRATION_DEVICE_MAGNETOMETER );
 }
 
 sub emergency
 {
     my ($self) = @_;
-    $self->sender->at_ref( 0, 1 );
+    $self->driver->at_ref( 0, 1 );
     $self->video->emergency_restart if defined $self->video;
     return 1;
 }
@@ -67,7 +67,7 @@ sub emergency
 sub reset_watchdog
 {
     my ($self) = @_;
-    $self->sender->at_comwdg();
+    $self->driver->at_comwdg();
     return 1;
 }
 
@@ -189,8 +189,8 @@ sub hover
         no strict 'refs';
         *$name = sub {
             my ($self) = @_;
-            $self->sender->at_config(
-                $self->sender->ARDRONE_CONFIG_CONTROL_FLIGHT_ANIM,
+            $self->driver->at_config(
+                $self->driver->ARDRONE_CONFIG_CONTROL_FLIGHT_ANIM,
                 sprintf( '%d,%d', $anim, $mayday ),
             );
         };
@@ -293,11 +293,11 @@ sub hover
         no strict 'refs';
         *$name = sub {
             my ($self, $freq, $duration) = @_;
-            $self->sender->at_config(
-                $self->sender->ARDRONE_CONFIG_LEDS_LEDS_ANIM,
+            $self->driver->at_config(
+                $self->driver->ARDRONE_CONFIG_LEDS_LEDS_ANIM,
                 sprintf( '%d,%d,%d',
                     $anim,
-                    $self->sender->float_convert( $freq ),
+                    $self->driver->float_convert( $freq ),
                     $duration,
                 ),
             );
@@ -317,9 +317,9 @@ sub convert_sdl_input
 sub start_userbox_nav_data
 {
     my ($self) = @_;
-    $self->sender->at_config(
-        $self->sender->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
-        $self->sender->ARDRONE_USERBOX_CMD_START,
+    $self->driver->at_config(
+        $self->driver->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
+        $self->driver->ARDRONE_USERBOX_CMD_START,
     );
     return 1;
 }
@@ -327,9 +327,9 @@ sub start_userbox_nav_data
 sub stop_userbox_nav_data
 {
     my ($self) = @_;
-    $self->sender->at_config(
-        $self->sender->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
-        $self->sender->ARDRONE_USERBOX_CMD_STOP,
+    $self->driver->at_config(
+        $self->driver->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
+        $self->driver->ARDRONE_USERBOX_CMD_STOP,
     );
     return 1;
 }
@@ -337,9 +337,9 @@ sub stop_userbox_nav_data
 sub cancel_userbox_nav_data
 {
     my ($self) = @_;
-    $self->sender->at_config(
-        $self->sender->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
-        $self->sender->ARDRONE_USERBOX_CMD_CANCEL,
+    $self->driver->at_config(
+        $self->driver->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
+        $self->driver->ARDRONE_USERBOX_CMD_CANCEL,
     );
     return 1;
 }
@@ -349,10 +349,10 @@ sub take_picture
     my ($self, $delay, $num_pics, $date) = @_;
     $date = DateTime->now->strftime( '%Y%m%d_%H%M%S' )
         if ! defined $date;
-    $self->sender->at_config(
-        $self->sender->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
+    $self->driver->at_config(
+        $self->driver->ARDRONE_CONFIG_USERBOX_USERBOX_CMD,
         sprintf( '%d,%d,%d,%s', 
-            $self->sender->ARDRONE_USERBOX_CMD_SCREENSHOT,
+            $self->driver->ARDRONE_USERBOX_CMD_SCREENSHOT,
             $delay,
             $num_pics,
             $date,
@@ -364,8 +364,8 @@ sub take_picture
 sub record_usb
 {
     my ($self) = @_;
-    $self->sender->at_config(
-        $self->sender->ARDRONE_CONFIG_VIDEO_VIDEO_ON_USB,
+    $self->driver->at_config(
+        $self->driver->ARDRONE_CONFIG_VIDEO_VIDEO_ON_USB,
         'TRUE',
     );
     return 1;
