@@ -10,7 +10,7 @@ my $ardrone = UAV::Pilot::Driver::ARDrone::Mock->new({
 });
 $ardrone->connect;
 my $dev = UAV::Pilot::Control::ARDrone::Event->new({
-    sender => $ardrone,
+    driver => $ardrone,
 });
 isa_ok( $dev => 'UAV::Pilot::Control::ARDrone::Event' );
 
